addons/deployment/hello_v2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-otr-deployment-v2
spec:
  selector:
    matchLabels:
      app: hello-v2
  replicas: 1
  template:
    metadata:
      name: hello-otr-v2
      labels:
        app: hello-v2
    spec:
      containers:
      - name: hello-otr
        image: lotusp/hello-world-of-node:1.1
        ports:
          - containerPort: 8080
