addons/deployment/hello_v2/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-v2
spec:
  selector:
    app: hello-v2
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
