addons/deployment/hello_v2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: hello
          servicePort: 8080
      - path: /v2/hello
        backend:
          serviceName: hello-v2
          servicePort: 8080
